Commit page aboutMe img

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="content">
             <div class="content-aboutMe">
                 <div class="content-aboutMe_img">
-                    <img src="assets/img/img1 - Copia.JPEG" alt="">
+                    <img src="assets/img/img1.JPEG" alt="">
                 </div>
                 <div class="content-aboutMe_text">
                     <div class="teste">
