Commit buttons up/down

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+    <!-- Botões fixos para navegação -->
+    <div class="navigation-buttons">
+        <button id="btn-up">↑</button>
+        <button id="btn-down">↓</button>
+    </div>
+
     <!-- HEADER -->
     <header>
         <div class="header">
