Commit page skills

--- a/index.html
+++ b/index.html
@@ -102,8 +102,48 @@
     </section>
       
     <section id="skills" class="section skills">
-        <div class="content">
-    
+        <div class="content-skills">
+            <div class="content-skills_title">
+                <h1>Minhas Habilidades</h1>
+            </div>
+            <div class="teste">
+                <div class="frontEnd">
+                    <div class="frontEnd-title">
+                        <img src="assets/icon_logo/front_end/code.png" alt="">
+                        <h1>Front-end</h1>
+                    </div>
+                    <div class="frontEnd-imgs">
+                        <img src="assets/icon_logo/front_end/html-5.png" alt="">
+                        <img src="assets/icon_logo/front_end/css-3.png" alt="">
+                        <img src="assets/icon_logo/front_end/react.png" alt="">
+                        <img src="assets/icon_logo/front_end/js.png" alt="">
+                    </div>
+                </div>
+                <div class="backEnd">
+                    <div class="backEnd-title">
+                        <img src="assets/icon_logo/back_end/backend.png" alt="">
+                        <h1>Back-end</h1>
+                    </div>
+                    <div class="backEnd-imgs">
+                        <img src="assets/icon_logo/back_end/js.png" alt="">
+                        <img src="assets/icon_logo/back_end/mysql.png" alt="">
+                        <img src="assets/icon_logo/back_end/web.png" alt="">
+                        <img src="assets/icon_logo/back_end/java.png" alt="">
+                    </div>
+                </div>
+                <div class="tools">
+                    <div class="tools-title">
+                        <img src="assets/icon_logo/tools/technical-support.png" alt="">
+                        <h1>Ferramentas</h1>
+                    </div>
+                    <div class="tools-imgs">
+                        <img src="assets/icon_logo/tools/github.png" alt="">
+                        <img src="assets/icon_logo/tools/vsCode.png" alt="">
+                        <img src="assets/icon_logo/tools/figma.png" alt="">
+                        <img src="assets/icon_logo/tools/git.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
