Commit page skills

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- SECTIONS -->
     <section>
         <div class="section home">
-            <div class="teste">
+            <div class="home-text">
                 <div class="home-title">
                     <h1>Bem vindo</h1>
                     <h2>ao meu portifólio</h2>
@@ -81,7 +81,7 @@
                     <img src="assets/img/img1.JPEG" alt="">
                 </div>
                 <div class="content-aboutMe_text">
-                    <div class="teste">
+                    <div class="content-aboutMe_title">
                         <h1>Sobre mim</h1>
                     </div>
                     
