--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="content-skills_title">
                 <h1>Minhas Habilidades</h1>
             </div>
-            <div class="teste">
+            <div class="content-skills_column">
                 <div class="frontEnd">
                     <div class="frontEnd-title">
                         <img src="assets/icon_logo/front_end/code.png" alt="">
