--- a/index.html
+++ b/index.html
@@ -148,8 +148,63 @@
     </section>
 
     <section id="projects" class="section projects">
-        <div class="content">
-
+        <div class="content-projects">
+            <div class="content-projects_carousel">
+                <div class="projects-title">
+                    <h1>Projetos</h1>
+                </div>
+                <div class="projects-carousel">
+                    <div class="projects-petz">
+                        <div class="projects-petz_title">
+                            <img src="assets/img/petz.png" alt="">
+                        </div>
+                        <div class="projects-petz_text">
+                            <h1>Petz</h1>
+                            <h2>Website loja de cosméticos para animais</h2>
+                            <p>
+                                Petz é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz.Petz 
+                                é um site que eu fiz com base no proprio site da petz.Petz é um site que eu fiz com base no proprio site da petz.Petz é um 
+                                site que eu fiz com base no proprio site da petz.
+                            </p>
+                            <div class="projects-petz_imgs">
+                                <img src="assets/icon_logo/front_end/html-5.png" alt="">
+                                <img src="assets/icon_logo/front_end/js.png" alt="">
+                                <img src="assets/icon_logo/front_end/css-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <h1></h1>
+                            <h2></h2>
+                            <p></p>
+                            <div>
+                                <img src="" alt="">
+                                <img src="" alt="">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <h1></h1>
+                            <h2></h2>
+                            <p></p>
+                            <div>
+                                <img src="" alt="">
+                                <img src="" alt="">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
