Commit projects content

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
                     <h1>Projetos</h1>
                 </div>
                 <div class="projects-carousel">
-                    <div class="projects-petz">
-                        <div class="projects-petz_title">
+                    <div class="project-one">
+                        <div class="project-one_title">
                             <img src="assets/img/petz.png" alt="">
                         </div>
-                        <div class="projects-petz_text">
+                        <div class="project-one_text">
                             <h1>Petz</h1>
                             <h2>Website loja de cosméticos para animais</h2>
                             <p>
@@ -166,40 +166,48 @@
                                 é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz é um 
                                 site que eu fiz com base no proprio site da petz.
                             </p>
-                            <div class="projects-petz_imgs">
+                            <div class="project-one_imgs">
                                 <img src="assets/icon_logo/front_end/html-5.png" alt="">
                                 <img src="assets/icon_logo/front_end/js.png" alt="">
                                 <img src="assets/icon_logo/front_end/css-3.png" alt="">
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div>
-                            <img src="" alt="">
+                    <div class="project-two">
+                        <div class="project-two_title">
+                            <img src="assets/img/petz.png" alt="">
                         </div>
-                        <div>
-                            <h1></h1>
-                            <h2></h2>
-                            <p></p>
-                            <div>
-                                <img src="" alt="">
-                                <img src="" alt="">
-                                <img src="" alt="">
+                        <div class="project-two_text">
+                            <h1>Petz</h1>
+                            <h2>Website loja de cosméticos para animais</h2>
+                            <p>
+                                Petz é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz 
+                                é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz é um 
+                                site que eu fiz com base no proprio site da petz.
+                            </p>
+                            <div class="project-two_imgs">
+                                <img src="assets/icon_logo/front_end/html-5.png" alt="">
+                                <img src="assets/icon_logo/front_end/js.png" alt="">
+                                <img src="assets/icon_logo/front_end/css-3.png" alt="">
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div>
-                            <img src="" alt="">
+                    <div class="project-three">
+                        <div class="project-three_title">
+                            <img src="assets/img/petz.png" alt="">
                         </div>
-                        <div>
-                            <h1></h1>
-                            <h2></h2>
-                            <p></p>
-                            <div>
-                                <img src="" alt="">
-                                <img src="" alt="">
-                                <img src="" alt="">
+                        <div class="project-three_text">
+                            <h1>Petz</h1>
+                            <h2>Website loja de cosméticos para animais</h2>
+                            <p>
+                                Petz é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz 
+                                é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz é um 
+                                site que eu fiz com base no proprio site da petz.
+                            </p>
+                            <div class="project-three_imgs">
+                                <img src="assets/icon_logo/front_end/html-5.png" alt="">
+                                <img src="assets/icon_logo/front_end/js.png" alt="">
+                                <img src="assets/icon_logo/front_end/css-3.png" alt="">
                             </div>
                         </div>
                     </div>
