Commit page projects

--- a/index.html
+++ b/index.html
@@ -147,18 +147,35 @@
         </div>
     </section>
 
+
     <section id="projects" class="section projects">
         <div class="content-projects">
-            <div class="content-projects_carousel">
-                <div class="projects-title">
-                    <h1>Projetos</h1>
+            <h1 class="projects-title">Projetos</h1>
+            <div class="projects-carousel">
+                <div class="card-list">
+                    <div class="card-item">
+                        <img class="card-image" src="assets/img/petz.png" alt="Imagem Projeto">
+                        <div class="card-text">
+                            <h1>Petz</h1>
+                            <h2>Website loja de cosméticos para animais</h2>
+                            <p>
+                                Petz é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz 
+                                é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz é um 
+                                site que eu fiz com base no proprio site da petz.
+                            </p>
+                            <div class="card-icons">
+                                <img src="assets/icon_logo/front_end/html-5.png" alt="">
+                                <img src="assets/icon_logo/front_end/js.png" alt="">
+                                <img src="assets/icon_logo/front_end/css-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>    
                 </div>
-                <div class="projects-carousel">
-                    <div class="project-one">
-                        <div class="project-one_title">
-                            <img src="assets/img/petz.png" alt="">
-                        </div>
-                        <div class="project-one_text">
+
+                <div class="card-list">
+                    <div class="card-item">
+                        <img class="card-image" src="assets/img/petz.png" alt="Imagem Projeto">
+                        <div class="card-text">
                             <h1>Petz</h1>
                             <h2>Website loja de cosméticos para animais</h2>
                             <p>
@@ -166,18 +183,19 @@
                                 é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz é um 
                                 site que eu fiz com base no proprio site da petz.
                             </p>
-                            <div class="project-one_imgs">
+                            <div class="card-icons">
                                 <img src="assets/icon_logo/front_end/html-5.png" alt="">
                                 <img src="assets/icon_logo/front_end/js.png" alt="">
                                 <img src="assets/icon_logo/front_end/css-3.png" alt="">
                             </div>
                         </div>
-                    </div>
-                    <div class="project-two">
-                        <div class="project-two_title">
-                            <img src="assets/img/petz.png" alt="">
-                        </div>
-                        <div class="project-two_text">
+                    </div>    
+                </div>
+
+                <div class="card-list">
+                    <div class="card-item">
+                        <img class="card-image" src="assets/img/petz.png" alt="Imagem Projeto">
+                        <div class="card-text">
                             <h1>Petz</h1>
                             <h2>Website loja de cosméticos para animais</h2>
                             <p>
@@ -185,32 +203,13 @@
                                 é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz é um 
                                 site que eu fiz com base no proprio site da petz.
                             </p>
-                            <div class="project-two_imgs">
+                            <div class="card-icons">
                                 <img src="assets/icon_logo/front_end/html-5.png" alt="">
                                 <img src="assets/icon_logo/front_end/js.png" alt="">
                                 <img src="assets/icon_logo/front_end/css-3.png" alt="">
                             </div>
                         </div>
-                    </div>
-                    <div class="project-three">
-                        <div class="project-three_title">
-                            <img src="assets/img/petz.png" alt="">
-                        </div>
-                        <div class="project-three_text">
-                            <h1>Petz</h1>
-                            <h2>Website loja de cosméticos para animais</h2>
-                            <p>
-                                Petz é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz 
-                                é um site que eu fiz com base no proprio site da petz. Petz é um site que eu fiz com base no proprio site da petz. Petz é um 
-                                site que eu fiz com base no proprio site da petz.
-                            </p>
-                            <div class="project-three_imgs">
-                                <img src="assets/icon_logo/front_end/html-5.png" alt="">
-                                <img src="assets/icon_logo/front_end/js.png" alt="">
-                                <img src="assets/icon_logo/front_end/css-3.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+                    </div>    
                 </div>
             </div>
         </div>
