Commit page footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                             </ul>
                         </div>
                         <div class="popup-icons">
-                            <a href=""><img src="assets/icon_logo/email.png" alt=""></a>
+                            <a href="">
+                                <img src="assets/icon_logo/email.png" alt="">
+                            </a>
                             <a target="_blank" href="https://www.linkedin.com/in/victor-zawacki-monteiro-69aa19262/">
                                 <img src="assets/icon_logo/linkedin.png" alt="">
                             </a>
@@ -228,10 +230,38 @@
 
     <!-- ? FOOTER -->
     <section id="footer" class="section footer">
-        <div class="content">
-            
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-links">
+                    <div class="footer-contact">
+                        <a target="_blank" href="#">e-mail</a>
+                        <a target="_blank" href="https://github.com/ovzm">link github</a>
+                    </div>
+                    <div class="footer-navigation">
+                        <a target="_blank" href="#">Home</a>
+                        <a target="_blank" href="#">Sobre Mim</a>
+                        <a target="_blank" href="#">Meus Projetos</a>
+                    </div>
+                </div>
+                <div class="footer-logo">
+                    <a target="_blank" href="#home">
+                        <span style="color: #0097EE;">Dev</span>Victor
+                    </a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="footer-copyright">
+                    <h1>© Victor Zawacki 2024</h1>
+                </div>
+                <div class="footer-social">
+                    <a target="_blank" href="#">IN</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/victor-zawacki-monteiro-69aa19262/">LN</a>
+                    <a target="_blank" href="https://github.com/ovzm">GH</a>
+                </div>
+            </div>
         </div>
     </section>
+    
 
     <!-- ? AOS Animação-->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
