Commit AOS animation projects

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     <section id="projects" class="section projects">
         <div class="content-projects">
             <h1 data-aos="fade-down" data-aos-delay="200" class="projects-title">Projetos web</h1>
-            <div class="projects-carousel">
+            <div data-aos="fade-down" data-aos-delay="400" class="projects-carousel">
                 <div class="card-list">
-                    <div data-aos="fade-down" data-aos-delay="400" class="card-item">
+                    <div class="card-item">
                         <a target="_blank" href="https://github.com/ovzm/project_petz">
                             <img data-aos="zoom-in" data-aos-delay="600" class="card-image" src="assets/img/petz.png" alt="Imagem Projeto">
                             <div class="card-text">
@@ -182,7 +182,7 @@
                 </div>
 
                 <div class="card-list">
-                    <div data-aos="fade-down" data-aos-delay="400" class="card-item">
+                    <div class="card-item">
                         <a target="_blank" href="https://github.com/ovzm/project_petz">
                             <img data-aos="zoom-in" data-aos-delay="600" class="card-image" src="assets/img/petz.png" alt="Imagem Projeto">
                             <div class="card-text">
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="card-list">
-                    <div data-aos="fade-down" data-aos-delay="400" class="card-item">
+                    <div class="card-item">
                         <a target="_blank" href="https://github.com/ovzm/project_petz">
                             <img data-aos="zoom-in" data-aos-delay="600" class="card-image" src="assets/img/petz.png" alt="Imagem Projeto">
                             <div class="card-text">
