--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                         <a target="_blank" href="https://github.com/ovzm">link github</a>
                     </div>
                     <div class="footer-navigation">
-                        <a target="_blank" href="#">Home</a>
-                        <a target="_blank" href="#">Sobre Mim</a>
-                        <a target="_blank" href="#">Meus Projetos</a>
+                        <a target="_blank" href="#home">Home</a>
+                        <a target="_blank" href="#about">Sobre Mim</a>
+                        <a target="_blank" href="#projects">Meus Projetos</a>
                     </div>
                 </div>
                 <div class="footer-logo">
@@ -254,14 +254,13 @@
                     <h1>© Victor Zawacki 2024</h1>
                 </div>
                 <div class="footer-social">
-                    <a target="_blank" href="#">IN</a>
+                    <a target="_blank" href="https://www.instagram.com/victor_zawacki/">IN</a>
                     <a target="_blank" href="https://www.linkedin.com/in/victor-zawacki-monteiro-69aa19262/">LN</a>
                     <a target="_blank" href="https://github.com/ovzm">GH</a>
                 </div>
             </div>
         </div>
-    </section>
-    
+    </section> 
 
     <!-- ? AOS Animação-->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
