--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                         <a target="_blank" href="https://github.com/ovzm">link github</a>
                     </div>
                     <div class="footer-navigation">
-                        <a target="_blank" href="#home">Home</a>
-                        <a target="_blank" href="#about">Sobre Mim</a>
-                        <a target="_blank" href="#projects">Meus Projetos</a>
+                        <a href="#home">Home</a>
+                        <a href="#about">Sobre Mim</a>
+                        <a href="#projects">Meus Projetos</a>
                     </div>
                 </div>
                 <div class="footer-logo">
