Commit Menu hamburger

--- a/index.html
+++ b/index.html
@@ -17,6 +17,42 @@
         <button id="btn-down">↓</button>
     </div>
 
+    <!-- ? MENU BURGUER -->
+    <div class="testeMenu">
+        <button id="openPopupMenu">
+            <img src="assets/icon_logo/interface.png" alt="">
+        </button>
+        <div id="popupMenu" class="popup">
+            <div class="popup-content">
+                <div class="popup-close">
+                    <span class="closeMenu"><img src="assets/icon_logo/close.png" alt=""></span>
+                </div>
+                <div class="popup-menu">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">Sobre mim</a></li>
+                        <li><a href="#skills">Habilidades</a></li>
+                        <li><a href="#skills">Projetos</a></li>
+                        <li><a href="">Certificados</a></li>
+                        <li><a href="">Contato</a></li>
+                        <li><a href="">Currículo</a></li>
+                    </ul>
+                </div>
+                <div class="popup-icons">
+                    <a href="">
+                        <img src="assets/icon_logo/email.png" alt="">
+                    </a>
+                    <a target="_blank" href="https://www.linkedin.com/in/victor-zawacki-monteiro-69aa19262/">
+                        <img src="assets/icon_logo/linkedin.png" alt="">
+                    </a>
+                    <a target="_blank" href="https://github.com/ovzm">
+                        <img src="assets/icon_logo/github.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- ? HEADER -->
     <header>
         <div class="header">
@@ -68,7 +104,7 @@
 
     <!-- ? SECTIONS -->
     <!-- ? HOME -->
-    <section>
+    <section id="home">
         <div class="section home">
             <div class="home-text">
                 <div class="home-title">
@@ -244,7 +280,7 @@
                     </div>
                 </div>
                 <div class="footer-logo">
-                    <a target="_blank" href="#home">
+                    <a href="#home">
                         <span style="color: #0097EE;">Dev</span>Victor
                     </a>
                 </div>
