Commit Hover NavBar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </div>
 
     <!-- ? MENU BURGUER -->
-    <div class="testeMenu">
+    
+    <!-- <div class="testeMenu">
         <button id="openPopupMenu">
             <img src="assets/icon_logo/interface.png" alt="">
         </button>
@@ -51,7 +52,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
+   
 
     <!-- ? HEADER -->
     <header>
@@ -69,7 +71,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="headerMenu">
+            <!-- <div class="headerMenu">
                 <button id="openPopupBtn">
                     <img src="assets/icon_logo/interface.png" alt="">
                 </button>
@@ -98,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </header>
 
