Commit about me page

--- a/index.html
+++ b/index.html
@@ -126,20 +126,34 @@
                 </div>
                 <div class="content-aboutMe_text">
                     <div class="content-aboutMe_title">
-                        <h1 data-aos="fade-down" data-aos-delay="200">Sobre mim</h1>
+                        <img data-aos="fade-down" data-aos-delay="200" src="assets/icon_logo/aboutMe/id-card2.png" alt="Ícone Id">
+                        <h1 data-aos="fade-down" data-aos-delay="200"><span style="color: white;">Sobre</span> mim</h1>
                     </div>
                     
+                    <h2 data-aos="fade-down" data-aos-delay="600">Olá! Bem-vindo ao meu portfólio! <br><span style="color: #0097EE;">Eu sou o Victor Zawacki monteiro</span>.</h2>
                     
-                    <h2 data-aos="fade-down" data-aos-delay="600">Olá! Bem-vindo ao meu portfólio. Sou apaixonado por tecnologia e 
-                        desenvolvimento, sempre buscando novas maneiras de solucionar problemas 
-                        e criar projetos inovadores. Aqui, você encontrará uma seleção de meus trabalhos 
-                        mais recentes, onde aplico minhas habilidades em desenvolvimento web.
+                    <h2 data-aos="fade-down" data-aos-delay="700">Estudante de <span style="color: #0097EE;">Ciências da Computação</span>, apaixonado por tecnologia e desenvolvimento, 
+                        sempre buscando novas maneiras de solucionar problemas e criar projetos inovadores.
+                        Aqui, você encontrará uma seleção de meus trabalhos mais recentes, onde aplico minhas
+                        habilidades em <span style="color: #0097EE;">desenvolvimento web</span>.
                     </h2>
 
-                    <h2 data-aos="fade-down" data-aos-delay="700">Além disso, estou constantemente me aprimorando e explorando novas ideias. Fique 
-                        à vontade para explorar meus projetos atuais e ter uma visão do que estou desenvolvendo 
-                        para o futuro.
+                    <h2 data-aos="fade-down" data-aos-delay="800">Além disso, estou constantemente me aprimorando e explorando novas ideias. Fique 
+                        à vontade para explorar meus projetos atuais e ter uma visão do que estou desenvolvendo para o futuro.
                     </h2>
+
+                    <h2 data-aos="fade-down" data-aos-delay="900">Atualmente, meu foco está no <span style="color: #0097EE;">desenvolvimento front-end</span>, onde combino
+                        habilidades tecnicas com design intuitivo para criar interfaces funcionais e atrativos. Além disso, estou expandindo meus conhecimentos em 
+                        <span style="color: #0097EE;">back-end e banco de dados</span>, sempre ansioso para trabalhar em novos projetos e fazer o que eu gosto.
+                    </h2>
+
+                    <div class="content-aboutMe_studing">
+                        <h1 data-aos="fade-down" data-aos-delay="1000"><span>Estudando no momento:</span></h1>
+                        <img src="assets/icon_logo/aboutMe/js.png" alt="Ícone JavaScript">
+                        <img src="assets/icon_logo/aboutMe/react.png" alt="Ícone React">
+                        <img src="assets/icon_logo/aboutMe/programing.png" alt="Ícone NodeJS">
+                        <img src="assets/icon_logo/aboutMe/mysql.png" alt="Ícone MySql">
+                    </div>
                 </div>
             </div>
         </div>
