Commit AOS about me

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
 
                     <div class="content-aboutMe_studing">
                         <h1 data-aos="fade-down" data-aos-delay="1000"><span>Estudando no momento:</span></h1>
-                        <img src="assets/icon_logo/aboutMe/js.png" alt="Ícone JavaScript">
-                        <img src="assets/icon_logo/aboutMe/react.png" alt="Ícone React">
-                        <img src="assets/icon_logo/aboutMe/programing.png" alt="Ícone NodeJS">
-                        <img src="assets/icon_logo/aboutMe/mysql.png" alt="Ícone MySql">
+                        <img data-aos="fade-down" data-aos-delay="1000" src="assets/icon_logo/aboutMe/js.png" alt="Ícone JavaScript">
+                        <img data-aos="fade-down" data-aos-delay="1000" src="assets/icon_logo/aboutMe/react.png" alt="Ícone React">
+                        <img data-aos="fade-down" data-aos-delay="1000" src="assets/icon_logo/aboutMe/programing.png" alt="Ícone NodeJS">
+                        <img data-aos="fade-down" data-aos-delay="1000" src="assets/icon_logo/aboutMe/mysql.png" alt="Ícone MySql">
                     </div>
                 </div>
             </div>
