--- a/index.html
+++ b/index.html
@@ -56,21 +56,34 @@
    
 
     <!-- ? HEADER -->
-    <header>
-        <div class="header">
-            <div class="title">
-                <a href="#home"><span style="color: #0097EE;">Dev</span>Victor</a>
-            </div>
-            <div class="navbar">
-                <nav>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">Sobre mim</a></li>
-                        <li><a href="#skills">Habilidades</a></li>
-                        <li><a href="#projects">Projetos</a></li>
-                    </ul>
-                </nav>
-            </div>
+    <header class="header">
+        <div class="title">
+            <a href="#home"><span style="color: #0097EE;">Dev</span>Victor</a>
+        </div>
+        <nav class="nav" id="nav">
+            <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+                <span id="hamburger"></span>
+            </button>
+            <ul class="menu" id="menu" role="menu">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">Sobre mim</a></li>
+                    <li><a href="#skills">Habilidades</a></li>
+                    <li><a href="#projects">Projetos</a></li>
+            </ul>
+        </nav>
+
+
+        <!-- <div class="title">
+            <a href="#home"><span style="color: #0097EE;">Dev</span>Victor</a>
+        </div>
+        <nav class="nav-bar">
+            <ul class="nav-list">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">Sobre mim</a></li>
+                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#projects">Projetos</a></li>
+            </ul>
+        </nav> -->
             <!-- <div class="headerMenu">
                 <button id="openPopupBtn">
                     <img src="assets/icon_logo/interface.png" alt="">
@@ -101,7 +114,6 @@
                     </div>
                 </div>
             </div> -->
-        </div>
     </header>
 
     <!-- ? SECTIONS -->
