Commit responsive menu

--- a/index.html
+++ b/index.html
@@ -61,18 +61,16 @@
             <a href="#home"><span style="color: #0097EE;">Dev</span>Victor</a>
         </div>
         <nav class="nav" id="nav">
-            <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+            <button class="btn-mobile" aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                 <span id="hamburger"></span>
             </button>
             <ul class="menu" id="menu" role="menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">Sobre mim</a></li>
-                    <li><a href="#skills">Habilidades</a></li>
-                    <li><a href="#projects">Projetos</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">Sobre mim</a></li>
+                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#projects">Projetos</a></li>
             </ul>
         </nav>
-
-
         <!-- <div class="title">
             <a href="#home"><span style="color: #0097EE;">Dev</span>Victor</a>
         </div>
